# dev-vault

./: .gitignore  AGENT.md  CLAUDE.md  README.md  biome.json  index.html  package.json  vite.config.ts
scripts/: copy-mcp-bin.mjs  ensure-mcp-bin.mjs
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_documentation_system.sql  003_fix_doc_triggers.sql  004_fix_fts_for_docs.sql
src-tauri/src/: lib.rs  main.rs  shortcuts.rs
src-tauri/src/commands/: mcp.rs  mod.rs
src-tauri/src/domain/: config_manager.rs  documentation_manager.rs  mod.rs  search_engine.rs  storage.rs
src-tauri/src/domain/docs/: github_docs.rs  mdn.rs  mod.rs  nodejs.rs  python.rs  react.rs  rust.rs  typescript.rs
src-tauri/src/domain/parsers/: doc_registry.rs  github_parser.rs  mod.rs  url_scraper.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/models/: config.rs  documentation.rs  mod.rs
src-tauri/tests/: cleanup.rs  mock_items.rs  search_speed.rs  test_support.rs
src/assets/doc-logos/: bun.tsx  elysiajs.tsx  hono.tsx  index.ts  index.tsx  mdn.tsx  nextjs.tsx  nodejs.tsx  nuxtjs.tsx  python.tsx  react.tsx  rust.tsx  typescript.tsx
src/components/composite/: AdmonitionBlock.tsx  CodeEditor.tsx  CreateItemModal.tsx  DocLogo.tsx  ItemCard.tsx  ItemDetail.tsx  ItemsList.tsx  ItemsViewModeSwitch.tsx  MarkdownRender.tsx  SearchBar.tsx  SidebarDocButton.tsx  StructureTagFilter.tsx  TypeFilter.tsx
src/components/composite/Documentation/: DocBrowser.tsx  DocEntryViewer.tsx  DocGraphTab.tsx  DocRender.tsx  DocTreeView.tsx  DocViewer.tsx  StatusBar.tsx
src/components/composite/Items/: BaseItems.tsx  DocItems.tsx  index.tsx
src/components/composite/Settings/: SettingsModal.tsx  (+1 more)
src/components/layouts/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Kbd.tsx  Modal.tsx  Select.tsx  Switch.tsx  Textarea.tsx  index.ts
src/contexts/: ItemActionsContext.tsx
src/hooks/: useExternalLinks.ts  useHotkey.ts
src/lib/: shortcuts.ts
src/lib/graph/: GraphRenderer.ts  docGraphAdapter.ts  graphSimulation.worker.ts
src/services/: tauri.ts
src/shared/: shortcuts.json
src/stores/: docsStore.ts  index.ts  itemsStore.ts  settingsStore.ts  tabsStore.ts  uiStore.ts
src/types/: graph.d.ts  index.d.ts  index.ts  language.d.ts
src/utils/: docEntryCache.ts  readTime.ts  tagColors.ts
web/: package.json
web/src/: App.tsx  index.css
(+31 files in other folders)
