[package]
name = "dev-vault"
version = "0.1.0"
description = "Dev Vault"
authors = ["Mike Noired"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
toml = "0.9.10"

# Парсинг и скрейпинг
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
pulldown-cmark = "0.12"
async-trait = "0.1"
url = "2.5"
regex = "1.11"
html2md = "0.2.15"
ego-tree = "0.10.0"
tauri-plugin-shell = "2"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
once_cell = "1.21.3"

